clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_line_continuation.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1363
expression: "test_tokenizer(r\"a\\\nbc\")?"
---
TokenizerResult(
  input: "a\\\nbc",
  result: [
    Word("abc", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 5,
        line: 2,
        column: 3,
      ),
    )),
  ],
)
