clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_operators.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1372
expression: "test_tokenizer(\"a>>b\")?"
---
TokenizerResult(
  input: "a>>b",
  result: [
    Word("a", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 1,
        line: 1,
        column: 2,
      ),
    )),
    Operator(">>", SourceSpan(
      start: SourcePosition(
        index: 1,
        line: 1,
        column: 2,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
    Word("b", SourceSpan(
      start: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
      end: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
    )),
  ],
)
