clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_simple_backquote.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1536
expression: "test_tokenizer(r\"echo `echo hi`\")?"
---
TokenizerResult(
  input: "echo `echo hi`",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("`echo hi`", SourceSpan(
      start: SourcePosition(
        index: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        index: 14,
        line: 1,
        column: 15,
      ),
    )),
  ],
)
