clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_single_quote.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1669
expression: "test_tokenizer(r\"x'a b'y\")?"
---
TokenizerResult(
  input: "x\'a b\'y",
  result: [
    Word("x\'a b\'y", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 7,
        line: 1,
        column: 8,
      ),
    )),
  ],
)
